--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,31 @@
     <string name="textview">TextView</string>
     <string name="note1"><b>note</b>  you can combine one of the vertical with one of the horizontal gravities
     \nfor example : top-start , bottom-left</string>
+    <string name="lifecycle">Lifecycle</string>
+    <string name="intent">Intent</string>
+    <string name="image">image</string>
+    <string name="fire_intent">fire Intent</string>
+    <string name="ok">ok</string>
+    <string name="cancel">cancel</string>
+    <string name="shared_preference">shared preference</string>
+    <string name="name">Name</string>
+    <string name="pu">public</string>
+    <string name="pr">private</string>
+    <string name="email">EMail</string>
+    <string name="password">Password</string>
+    <string name="internal_sorage">internal storage</string>
+    <string name="external_storage">external storage</string>
+    <string name="folder">Folder</string>
+    <string name="save">Save</string>
+    <string name="view_data">View Data</string>
+    <string name="save_file">Save File</string>
+    <string name="first_number">first number</string>
+    <string name="second_number">second number</string>
+    <string name="none">No value</string>
+    <string name="save_to_shared_preference">Save to Shared Preference</string>
+    <string name="biew_result">View result</string>
+    <string name="even">Even</string>
+    <string name="odd">Odd</string>
     <string-array name="logs">
         <item>log-d</item>
         <item>log-i</item>
@@ -40,5 +65,11 @@
         <item>bottom</item>
         <item>end  <small>(right in arabic left in english)</small></item>
         <item>Start  <small>(left in arabic right in english)</small></item>
+    </string-array>
+    <string-array name="intent">
+        <item>want to open</item>
+        <item>another activity</item>
+        <item>camera</item>
+        <item>google</item>
     </string-array>
 </resources>
